--- a/server/Pipfile
+++ b/server/Pipfile
@@ -7,6 +7,15 @@ name = "pypi"
 uvicorn = "*"
 requests = "*"
 fastapi = "*"
+bcrypt = "*"
+cryptography = "*"
+python-jose = "*"
+python-multipart = "*"
+sqlalchemy = "*"
+passlib = "*"
+pymongo = {extras = ["srv"], version = "==3.12"}
+certifi = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
