changed routes to make them more specific

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -11,11 +11,11 @@ bcrypt = "*"
 cryptography = "*"
 python-jose = "*"
 python-multipart = "*"
-sqlalchemy = "*"
 passlib = "*"
 pymongo = {extras = ["srv"], version = "==3.12"}
 certifi = "*"
 python-dotenv = "*"
+pydantic = "*"
 
 [dev-packages]
 
