auth implemented (hopefully it works will test later)

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -11,6 +11,9 @@ fastapi = "*"
 uvicorn = "*"
 pydantic = "*"
 pymongo = {extras = ["srv"], version = "*"}
+passlib = "*"
+bcrypt = "*"
+python-jose = "*"
 
 [dev-packages]
 
