added routes that provide response with google gemini

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -14,6 +14,7 @@ pymongo = {extras = ["srv"], version = "*"}
 passlib = "*"
 bcrypt = "*"
 python-jose = "*"
+google-generativeai = "*"
 
 [dev-packages]
 
